--- a/torrc/Dockerfile
+++ b/torrc/Dockerfile
@@ -1,11 +1,10 @@
 FROM alpine:latest
 
-RUN apk update
-RUN apk add tor
-RUN rm -rf /var/cache/apk/*
-
-RUN echo "Log notice stdout" >> /etc/torrc
-RUN echo "SocksPort 0.0.0.0:9150" >> /etc/torrc
+RUN apk update && \
+   apk add tor && \
+   rm -rf /var/cache/apk/* && \
+   echo "Log notice stdout" >> /etc/torrc && \
+   echo "SocksPort 0.0.0.0:9150" >> /etc/torrc
 
 EXPOSE 9150
 
